@@ -1,0 +1,17 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<pre>No Format Test File
+===================
+
+This file tests the the default parser used if Text::Markup can't figure out the
+type of parser to use. Powered by Text::Markup::None. Öy.
+
+    func main() {
+        fmt.Println(&quot;hello&quot;)
+    }
+</pre>
+</body>
+</html>
