@@ -1,6 +1,10 @@
 Revision history for Perl extension Text-Markup.
 
 0.33
+    - Added support for registering a regular expression for Text::Markup::None
+      by passing it in the `use` statement. The None parser otherwise is only
+      the fallback parser used by `parse()` when Text::Markup cannot determine
+      which parser to use.
 
 0.32  2024-02-08T03:25:18Z
     - Added the ability to change the regular expression for a format by
